Ver.
---------------------------

Ver. 1.7.1 - 2021-06-14
---------------------------
- Feature - Edited Unique Key of category_translations (migration added)
- Feature - GroupKey prop added to CategoryGroupDto

Ver. 1.7.0 - 2021-06-10
---------------------------
- Feature - Add filter on receiver list in case of new Communication (#29)
- Feature - DashboardAppService added (#4)
- Feature - Categories refactoring (2 migrations added)(#28)


Ver. 1.6.0 - 2021-05-31
---------------------------
- Feature - GetCategories API made public
- Feature - ImportUsers API implementation (#26)

Ver. 1.5.5 - 2021-05-20
---------------------------
- Feature - IsFirstLogin field added to Person, update of ImportApiService, Permission initializations (migration added) (#25)
- Feature - ClientIpAddress property removed (migration added) (#24)
- Feature - RabbitMQ client added and Connection management (appsettings Bus section edited)(#2)

Ver. 1.5.4 - 2021-04-09
---------------------------
- Feature - Status 'Ready' added, update of Social Media Module SDK: NL added, id_str for tweet (#18)

Ver. 1.5.3. - 2021-04-01
---------------------------
- Feature - Update preferred languages API added and UpdateProfile API updated (#20)
- Feature - Added Hazard property to Activity (migration added) (#19)

Ver. 1.5.2 - 2021-03-26
---------------------------
- Feature - Add GroupIcon prop to Category, UnitOfMeasure moved to cat_translations (migration added) (#16)

Ver. 1.5.1 - 2021-03-23
---------------------------
- Feature - Add AdultInfo prop to Report, but NOT in ReportDto (migration added) (#15)
- Feature - Update of SocialAppService and SocialMedia SDK (#18)

Ver. 1.5.0 - 2021-02-25
---------------------------
- Bugfix - Fix CreatePersonAction bug (#14)
- Feature - Citizen visibility management (migration added, prop Visibility removed) (#10)

Ver. 1.4.9 - 2021-02-19
----------------------------
- Feature - Docker volume mapping for Logs (#11)