@@ -44,6 +44,8 @@
     <Compile Include="Migrations\20210528125730_Category_GroupKey_SubGroupKey_Added.Designer.cs" />
     <Compile Include="Migrations\20210614102255_Category_SubGroup_AddedToUniqueKeys.cs" />
     <Compile Include="Migrations\20210614102255_Category_SubGroup_AddedToUniqueKeys.Designer.cs" />
+    <Compile Include="Migrations\20210618075639_Category_Target_Translations.cs" />
+    <Compile Include="Migrations\20210618075639_Category_Target_Translations.Designer.cs" />
     <Compile Include="Migrations\ErmesDbContextModelSnapshot.cs" />
     <Compile Include="Migrations\Seed\ModelBuilderExtensions.cs" />
   </ItemGroup>
